added students and actual index
added all student folders

--- a/index.html
+++ b/index.html
@@ -6,14 +6,28 @@
         <title>RISD Experiments</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
+        <link rel="stylesheet" src="css/main.css">
     </head>
 
     <body>
-        <h1>The Best Wintersession Web Class EVARRR</h1>
-        <p>starring:</p>
+        <h1>RISD Winter Session Web Design</h1>
+        <h2>Section 2</h2>
+        <h2>Instructor: Ojus Doshi</h2>
+
         <ul>
-            <li>student1</li>
-            <li>student2</li>
+            <li>eunsu</li>
+            <li>gyu-won</li>
+            <li>habiba</li>
+            <li>jason</li>
+            <li>ji</li>
+            <li>jingru</li>
+            <li>jose</li>
+            <li>ruth</li>
+            <li>sam</li>
+            <li>sunghoon</li>
+            <li>yuexin</li>
+            <li>yun-ting</li>
+            <li>yuxin</li>
         </ul>
 
     </body>
