--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <link href='http://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic|Roboto:400,400italic' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" src="css/main.css">
+        <link rel="stylesheet" type="text/css" src="css/main.css">
     </head>
 
     <body>
