--- a/yuxin/Seven Principles.html
+++ b/yuxin/Seven Principles.html
@@ -10,7 +10,7 @@
    </head>
 
    <body>
-   	    <h2>
+   	    <h2 style="color:blue; font-family:arial">
    	    	Seven Principles of Typographic Contrast
    	    </h2>
    	    <h4>
