Update Markup of Dair's Seven Principles of Typographic Contrast.html

--- a/tomas/Markup of Dair's Seven Principles of Typographic Contrast.html
+++ b/tomas/Markup of Dair's Seven Principles of Typographic Contrast.html
@@ -7,9 +7,15 @@
 		<title>Dair's Seven Principles of Typographic Contrast</title>
 		<meta name="description" content="An essay on Carl Dair's <i>Seven Principles of Typographic Contrast</i>">
 		<meta name="viewport" contents="width-device-width">
+		<!--<style>
+			body{	color: 555454; 
+			font-family: helvetica;
+			text-align: justify
+		</style> }-->
+		<link rel="stylesheet" type="text/css" href="text.css">
 	</head>
 
-<font color="555454" face="helvetica" align="justify">
+
 	
 	<body>
 
@@ -96,6 +102,5 @@
 		<small>Written by John D. Berry</small>
 
 </footer>
-</font>
 
 </html>
