--- a/tomas/Markup of Dair's Seven Principles of Typographic Contrast.html
+++ b/tomas/Markup of Dair's Seven Principles of Typographic Contrast.html
@@ -11,8 +11,9 @@
 			body{	color: 555454; 
 			font-family: helvetica;
 			text-align: justify
-		</style> }-->
+		</style> -->
 		<link rel="stylesheet" type="text/css" href="text.css">
+
 	</head>
 
 
@@ -54,36 +55,72 @@
 			<li>Other Types of Contrast</li>
 		</ul>
 
-		<div align="center"><img src="http://www.creativepro.com/files/story_images/072803_fg4.jpg" alt="<h4>Contrast of Size</h4>"></div>
+		<div align="center"><img src="http://www.creativepro.com/files/story_images/072803_fg4.jpg" alt="<h4>Contrast of Size</h4>" style="float:left;" HSPACE="50" VSPACE="12"></div>
 
 		<p>The first and most basic contrast is size. "A simple but dramatic contrast of size," says Dair, "provides a point to which the reader's attention is drawn. Set in the same style of type, it maintains the exact relationship of the letter to the background. It is only a physical enlargement of the basic pattern created by the form and the weight of the type being used for the text." The most common use of size is in making the title or heading noticeably bigger than the text -- but that's only a starting-point.</p>
 
-		<div align="center"><img src="http://www.creativepro.com/files/story_images/072803_fg9.jpg" alt="<h4>Contrast of Weight</h4>"></div>
+		<br>
+		<br>
+		<br>
+		<br>
+
+		<div align="center"><img src="http://www.creativepro.com/files/story_images/072803_fg9.jpg" alt="<h4>Contrast of Weight</h4>" style="float:right;" HSPACE="50" VSPACE="12"></div>
 		
 
 		<p>The second most obvious contrast is of weight: bold type stands out in the middle of lighter type of the same style. As Dair points out, "Not only types of varying weight, but other typographic material such as rules, spots, squares, etc., can be called into service to provide a heavy area for a powerful point of visual attraction or emphasis."</p>
 
 		<p>The next two kinds of contrast are the contrast of form and the contrast of structure. It's not entirely obvious where to draw a line between these two, since they both have to do with the shapes of the letters.</p>
 
-		<div align="center"><img src="http://www.creativepro.com/files/story_images/072803_fg6.jpg" alt="<h4>Contrast of Form</h4>"></div>
+		<br>
+
+		<div align="center"><img src="http://www.creativepro.com/files/story_images/072803_fg6.jpg" alt="<h4>Contrast of Form</h4>" style="float:left;" HSPACE="50" VSPACE="12"></div>
 
 		<p>By "form," Dair means the distinction between a capital letter and its lowercase equivalent, or a roman letter and its italic variant. He includes condensed and expanded versions under "form," and he even allows as how "there are some script types which harmonize with standard types, such as the Bank Script and Bodoni on the opposite page, and can be used for dramatic change of form." (He warns, parenthetically, against using scripts and italics together, since they are both versions of handwritten letters; they're more likely to conflict than to contrast.)</p>
 
-		<div align="center"><img src="http://www.creativepro.com/files/story_images/072803_fg7.jpg" alt="<h4>Contrast of Structure</h4>"></div>
+		<br>
+
+		<div align="center"><img src="http://www.creativepro.com/files/story_images/072803_fg7.jpg" alt="<h4>Contrast of Structure</h4>" style="float:right;" HSPACE="50" VSPACE="12"></div>
 
 		<p>By "structure," Dair means the different letterforms of different kinds of typefaces -- a monoline sans serif vs. a high-contrast modern, for instance, or an italic vs. a blackletter. "The use of contrast of structure may be compared to an orator who changes his voice not to increase or decrease the volume, but to change the very quality of his voice to suit his words."</p>
 
-		<div align="center"><img src="http://www.creativepro.com/files/story_images/072803_fg8.jpg" alt="<h4>Contrast of Texture</h4>"></div>
+		<br>
+		<br>
+		<br>
+
+		<div align="center"><img src="http://www.creativepro.com/files/story_images/072803_fg8.jpg" alt="<h4>Contrast of Texture</h4>" style="float:left;" HSPACE="50" VSPACE="12"></div>
 
 		<p>Put all these things together, and apply them to a block of text on a page, and you come to the contrast of texture: the way the lines of type look as a mass, which depends partly on the letterforms themselves and partly on how they're arranged. "Like threads in cloth," says Dair, "types form the fabric of our daily communication."</p>
 
-		<div align="center"><img src="http://www.creativepro.com/files/story_images/072803_fg9.jpg" alt="<h4>Contrast of Color</h4>"></div>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+
+		<div align="center"><img src="http://www.creativepro.com/files/story_images/072803_fg9.jpg" alt="<h4>Contrast of Color</h4>" style="float:right;" HSPACE="50" VSPACE="12"></div>
 
 		<p>Dair's sixth contrast is color -- and he warns that a second color is usually less emphatic than plain black on white (or white on black), so it's important to give careful thought to which element needs to be emphasized, and to pay attention to the tonal values of the colors used.</p>
 
-		<div align="center"><img src="http://www.creativepro.com/files/story_images/072803_fg10.jpg" alt="<h4>Contrast of Direction</h4>"></div>
+		<br>
+
+		<div align="center"><img src="http://www.creativepro.com/files/story_images/072803_fg10.jpg" alt="<h4>Contrast of Direction</h4>" style="float:left;" HSPACE="50" VSPACE="12"></div>
 
 		<p>The last of Dair's seven kinds of contrast is the contrast of direction: the opposition between vertical and horizontal, and the angles in between. Turning one word on its side can have a dramatic effect on a layout. But Dair points out that text blocks also have their vertical or horizontal aspects, and mixing wide blocks of long lines with tall columns of short lines can also produce a contrast.</p>
+
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
 
 		<h4>Other Types of Contrast</h4>
 
