Modify home page
added proper html and css for student work homepage / menu

--- a/index.html
+++ b/index.html
@@ -3,33 +3,42 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>RISD Experiments</title>
+        <title>RISD Winter Session Web Design Section 2</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <link href='http://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic|Roboto:400,400italic' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" src="css/main.css">
+        <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
 
     <body>
-        <h1>RISD Winter Session Web Design</h1>
-        <h2>Section 2</h2>
-        <h2>Instructor: Ojus Doshi</h2>
-
-        <ul>
-            <li>eunsu</li>
-            <li>gyu-won</li>
-            <li>habiba</li>
-            <li>jason</li>
-            <li>ji</li>
-            <li>jingru</li>
-            <li>jose</li>
-            <li>ruth</li>
-            <li>sam</li>
-            <li>sunghoon</li>
-            <li>yuexin</li>
-            <li>yun-ting</li>
-            <li>yuxin</li>
-        </ul>
+        <header>
+            <h1>RISD Winter Session</br>Web Design</h1>
+            <h2>Section 2</h2>
+            <h2>Instructor: Ojus Doshi</h2>
+        </header>
+        <section>
+            <h1>Student Work</h1>
+            <div>
+                <ul>
+                    <li><a href="chelsea/">chelsea</a></li>
+                    <li><a href="eunsu/">eunsu</a></li>
+                    <li><a href="greg/">greg</a></li>
+                    <li><a href="gyu-won/">gyu-won</a></li>
+                    <li><a href="ji/">ji</a></li>
+                    <li><a href="jingru/">jingru</a></li>
+                    <li><a href="jose/">jose</a></li>
+                </ul>
+                <ul>
+                    <li><a href="mimi/">mimi</a></li>
+                    <li><a href="ruth/">ruth</a></li>
+                    <li><a href="sam/">sam</a></li>
+                    <li><a href="srecht/">sarah</a></li>
+                    <li><a href="tomas/">tomás</a></li>
+                    <li><a href="yuexin/">yuexin</a></li>
+                    <li><a href="yuxin/">yuxin</a></li>
+                </ul>
+            </div>
+        </section>
 
     </body>
 
