--- a/ojus/index.html
+++ b/ojus/index.html
@@ -6,7 +6,7 @@
         <title>Ojus Assignment Homepage Webdesign</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <!-- <link rel="stylesheet" href="css/main.css"> -->
+        <link rel="stylesheet" href="css/main.css">
     </head>
 
     <body>
