--- a/ojus/ex1/index.html
+++ b/ojus/ex1/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <link href='http://fonts.googleapis.com/css?family=Gentium+Book+Basic:400,400italic' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="_css/main.css">
+        <link rel="stylesheet" href="css/main.css">
     </head>
 
     <body>
