--- a/ojus/index.html
+++ b/ojus/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <ol>
-            <li><a href="ex_1/index.html">Exercise 1: Carl Dair Markup</li>
+            <li><a href="ex1/index.html">Exercise 1: Carl Dair Markup</li>
             <li><a href="http://www.google.com">Project 1: Interview</a></li>
         </ol>
 
