Assignment 1- Styling Interview
html and css files

--- a/jose/carl dair/html.html
+++ b/jose/carl dair/html.html
@@ -7,18 +7,25 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <!-- <link rel="stylesheet" href="css/main.css"> -->
+        <style>
+            p {
+                color:green;
+            }
+
+        </style>
+        <link rel= "stylesheet" href="text.css">
     </head>
     
     <body>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        <p class="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
         consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
         cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-        <p>wassssup web im gona get you!</p>
+        <p class="lorem" id="second">wassssup web im gona get you!</p>
 
         <p>&amp;
 
@@ -27,7 +34,7 @@
         <h3>HEADING</h3>
 
         <blockquote>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            <p style="color: blue;" >Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
             consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
