--- a/eunsu/index.html
+++ b/eunsu/index.html
@@ -10,8 +10,8 @@
 
     <body>
     	<ol>
-    		<li> <a href="html/Gareth_bale.html">Project1:html></a></li>
-    		<li><a href="css/gareth_bale.css">Project1:css></a></li>
+    		<li> <a href="html/Gareth_bale.html">Project1:html</a></li>
+    		<li><a href="css/gareth_bale.css">Project1:css</a></li>
     	</ol>
 
     </body>
