--- a/gyu-won/index.html
+++ b/gyu-won/index.html
@@ -11,7 +11,7 @@
     
 
     <body>
-        <a href="../../RISD/04_Senior/Wintersession 2015/Web Design/Project 1/interview.html">Project 1</a>
+        <a href="/Project 1/interview.html">Project 1</a>
 
 
     </body>
