--- a/srecht/index.html
+++ b/srecht/index.html
@@ -9,7 +9,8 @@
  </head>
     <body> 
     
- <li> <a herf="project1/p1.html"></a> </li>
+ <li> <a herf="project1/p1.html"> project 1 </a>  </li>
     
     </body>
+
 </html>
