--- a/yuexin/index.html
+++ b/yuexin/index.html
@@ -14,7 +14,12 @@
     </head>
 
     <body>
-    <a href="Project 1 Interview/main.html" text-decoration:none; hover="color:orange"><p style="text-align:center; font-size:40px; text-decoration:none">Press me to get to the Interview!</p></a>
+
+    <link rel="stylesheet" href="Project 1 Interview/css/index.css">
+
+    <a href="Project 1 Interview/main.html"><p id="interview"; style="text-align:center; font-size:40px">Click me to get to the Interview!</p></a>
+
+    <a href="Exercises 1 Carl Dair Markup/File/html.html"><p id="exercise"; style="text-align:center; font-size:40px">Click me to get to the Carl Dair Markup!</p></a>
 
     </body>
 
