--- a/mimi/index.html
+++ b/mimi/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Text Elements</title>
+        <title>Mimi's Index</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <!-- <link rel="stylesheet" href="css/main.css"> -->
@@ -12,16 +12,17 @@
 
     <body>
 
-        Excercises
+        Exercises
         <ol>
-            <li><a href="Excercises/seven principles markup/seven principles.html">Carl Dair Markup</a></li>
+            <li><a href="exercises/art school website wireframe/sitemap.pdf">Art school website sitemap</a></li>
+            <li><a href="exercises/seven principles markup/seven principles.html">Carl Dair Markup</a></li>
         </ol>
 
         <br />
 
         Projects
         <ol>
-            <li><a href="Projects/interview style/interview style.html">Styled Interview</a></li>
+            <li><a href="projects/interview style/interview style.html">Styled Interview</a></li>
         </ol>
        
 
