--- a/jingru/project1_interview/interview.html
+++ b/jingru/project1_interview/interview.html
@@ -264,7 +264,7 @@
 					That's true. The first reviews of 2001 were insulting, let alone bad. An important Los Angeles critic faulted Paths of Glory because the actors didn't speak with French accents. When Dr. Strangelove came out, a New York paper ran a review under the head Moscow could not buy more harm to America. Something like that. But critical opinion on my films has always been salvaged by what I would call subsequent critical opinion. Which is why I think audiences are more reliable than critics, at least initially. Audiences tend not to bring all that critical baggage with them to each film.<br/><br/>
 					And I really think that a few critics come to my films expecting to see the last film. They're waiting to see something that never happens. I imagine it must be something like standing in the batter's box waiting for a fast ball, and the pitcher throws a change-up. The batter swings and misses. He thinks, "Shit, he threw me the wrong pitch." I think this accounts for some of the initial hostility.<br/><br/>
 					<span>Well, you don't make it easy on viewers or critics. You've said you want an audience to react emotionally. You create strong feelings, but you won't give us any easy answers.</span><br/><br/>
-					That's because I don't have any easy answers.<br/><br/>
+					That's because I don't have any easy answers.<br/><br/><br/><br/>
 
 					</p>
 					</div>
