--- a/gyu-won/index.html
+++ b/gyu-won/index.html
@@ -11,7 +11,7 @@
     
 
     <body>
-        <a href="/Project 1/interview.html">Project 1</a>
+        <li><a href="project01/interview.html">Project 1</a></li>
 
 
     </body>
