--- a/eunsu/Gareth_bale.html
+++ b/eunsu/Gareth_bale.html
@@ -6,7 +6,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="gareth_bale.css"> 
+        <link rel="stylesheet" href="css/gareth_bale.css"> 
     </head>
     
     <body>
