--- a/eunsu/index.html
+++ b/eunsu/index.html
@@ -10,7 +10,7 @@
 
     <body>
     	<ol>
-    		<li> <a href="html/Gareth_bale.html">Project1:html</a></li>
+    		<li> <a href="Gareth_bale.html">Project1:html</a></li>
     		<li><a href="css/gareth_bale.css">Project1:css</a></li>
     	</ol>
 
