--- a/gyu-won/index.html
+++ b/gyu-won/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>My folder</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <link type="text/css" rel="stylesheet" href="main.css"/>
@@ -11,8 +11,9 @@
     
 
     <body>
+        <ul>
         <li><a href="project01/interview.html">Project 1</a></li>
-
+    </ul>
 
     </body>
     
