--- a/eunsu/index.html
+++ b/eunsu/index.html
@@ -11,7 +11,7 @@
     <body>
     	<ol>
     		<li> <a href="Gareth_bale.html">Project1:html</a></li>
-    		<li><a href="css/gareth_bale.css">Project1:css</a></li>
+    		<li><a href="gareth_bale.css">Project1:css</a></li>
     	</ol>
 
     </body>
