--- a/yuxin/yuxin-index.html
+++ b/yuxin/yuxin-index.html
@@ -12,8 +12,8 @@
     <body>
         <ol>
 
-        <il><a href="seven-principles.html">Carl Dair Mark up</a></li>
-        <il><a href="web-interview/interview.html">Interview Project</a></il>
+        <li><a href="seven-principles.html">Carl Dair Mark up</a></li>
+        <li><a href="web-interview/interview.html">Interview Project</a></li>
 
         </ol>
         
