--- a/gyu-won/index.html
+++ b/gyu-won/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>My folder</title>
+        <title>Gyu Won</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <link type="text/css" rel="stylesheet" href="main.css"/>
@@ -11,9 +11,10 @@
     
 
     <body>
+
         <ul>
-        <li><a href="project01/interview.html">Project 1</a></li>
-    </ul>
+            <li><a href="project01/interview.html">Project 1: Interview</a></li>
+        </ul>
 
     </body>
     
