--- a/ji/index.html
+++ b/ji/index.html
@@ -11,7 +11,7 @@
     
     <body>
         <ol>
-            <li><a href="1/index.html"></a>Assignment 1</li>
+            <li><a href="1/index.html">Assignment 1</a></li>
         </ol>
     </body>
     
