--- a/tomas/week1exercises/3columngrid.html
+++ b/tomas/week1exercises/3columngrid.html
@@ -7,7 +7,7 @@
 		<title>3 Column Grid</title>
 		<meta name="description" content="">
 		<meta name="viewport" contents="width-device-width">
-		<link rel="stylesheet" type="text/css" href="../stylesheets/stylesheet-for-3-column-grid.css">
+		<link rel="stylesheet" type="text/css" href="3columngrid.css">
 	
 	</head>
 
