--- a/tomas/week1exercises/bloglayout.html
+++ b/tomas/week1exercises/bloglayout.html
@@ -7,7 +7,7 @@
 		<title>Blog Layout</title>
 		<meta name="description" content="">
 		<meta name="viewport" contents="width-device-width">
-		<link rel="stylesheet" type="text/css" href="../stylesheets/stylesheet-blog-layout.css">
+		<link rel="stylesheet" type="text/css" href="bloglayout.css">
 	
 	</head>
 
