--- a/tomas/week1exercises/chess.html
+++ b/tomas/week1exercises/chess.html
@@ -6,7 +6,7 @@
     <title>chess</title>
     <meta name="description" content="">
     <meta name="viewport" contents="width-device-width">
-    <link rel="stylesheet" type="text/css" href="../stylesheets/Chess_stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="chess.css">
   
   </head>
 
