--- a/tomas/week1exercises/tenniscourt.html
+++ b/tomas/week1exercises/tenniscourt.html
@@ -6,7 +6,7 @@
 		<title>tennis court</title>
 		<meta name="description" content="">
 		<meta name="viewport" contents="width-device-width">
-		<link rel="stylesheet" type="text/css" href="../stylesheets/Tennis_court_stylesheet.css">
+		<link rel="stylesheet" type="text/css" href="tenniscourt.css">
 	
 	</head>
 
