--- a/tomas/week1exercises/californiacase.html
+++ b/tomas/week1exercises/californiacase.html
@@ -7,7 +7,7 @@
     <title>Blog Layout</title>
     <meta name="description" content="">
     <meta name="viewport" contents="width-device-width">
-    <link rel="stylesheet" type="text/css" href="../stylesheets/stylesheet-california-case.css">
+    <link rel="stylesheet" type="text/css" href="californiacase.css">
   
   </head>  
 
