--- a/ruth/index.html
+++ b/ruth/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link type="text/css" rel="stylesheet" href=".css">
-</head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>Text Elements</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width">
+    </head>
 <body>
-	<a href=>Exercise 1: Carl Dair Markup</a>
-	<p><a href=>Project 1: Jacob Hashimoto Interview</a></p>
+	<a href"exercise1/exercise1-copy.html"=>Exercise 1: Carl Dair Markup</a>
+	<p><a href="project1/interview-copy.html">Project 1: Jacob Hashimoto Interview</a></p>
 </body>
 </html>
