--- a/ruth/index.html
+++ b/ruth/index.html
@@ -3,12 +3,12 @@
 <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Text Elements</title>
+        <title>Ruth</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
     </head>
 <body>
-	<a href"exercise1/exercise1-copy.html"=>Exercise 1: Carl Dair Markup</a>
+	<a href="exercise1/exercise1-copy.html">Exercise 1: Carl Dair Markup</a>
 	<p><a href="project1/interview-copy.html">Project 1: Jacob Hashimoto Interview</a></p>
 </body>
 </html>
