--- a/gyu-won/index.html
+++ b/gyu-won/index.html
@@ -12,6 +12,16 @@
 
     <body>
 
+        <h3>Exercises</h3>
+        <ul>
+            <li><a href="exercises/01"></a></li>
+            <li><a href="exercises/02-03/html.html"></a></li>
+            <li><a href="exercises/04/artcenter.jpg"></a></li>
+            <li><a href="exercises/05"></a></li>
+        </ul>
+
+
+        <h3>Projects</h3>
         <ul>
             <li><a href="project01/interview.html">Project 1: Interview</a></li>
         </ul>
