--- a/ruth/index.html
+++ b/ruth/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width">
     </head>
 <body>
-	<a href="exercise1/exercise1-copy.html">Exercise 1: Carl Dair Markup</a>
+	<p><a href="exercise1/exercise1-copy.html">Exercise 1: Carl Dair Markup</a></p>
 	<p><a href="project1/interview-copy.html">Project 1: Jacob Hashimoto Interview</a></p>
 </body>
 </html>
