--- a/mimi/index.html
+++ b/mimi/index.html
@@ -22,7 +22,7 @@
 
         Projects
         <ol>
-            <li><a href="projects/interviewstyle/interviewstyle.html">Styled Interview</a></li>
+            <li><a href="projects/interviewstyle/interviewstyle.html">Interview</a></li>
         </ol>
        
 
