--- a/yuexin/index.html
+++ b/yuexin/index.html
@@ -17,9 +17,9 @@
 
     <link rel="stylesheet" href="Project 1 Interview/css/index.css">
 
-    <a href="Project 1 Interview/main.html"><p id="interview"; style="text-align:center; font-size:40px">Click me to get to the Interview!</p></a>
+    <li><a href="Project 1 Interview/main.html"><p id="interview"; style="text-align:center; font-size:40px">Click me to get to the Interview!</p></a></li>
 
-    <a href="Exercises 1 Carl Dair Markup/File/html.html"><p id="exercise"; style="text-align:center; font-size:40px">Click me to get to the Carl Dair Markup!</p></a>
+    <li><a href="Exercises 1 Carl Dair Markup/File/html.html"><p id="exercise"; style="text-align:center; font-size:40px">Click me to get to the Carl Dair Markup!</p></a></li>
 
     </body>
 
