--- a/ruth/project1/interview.html
+++ b/ruth/project1/interview.html
@@ -6,8 +6,8 @@
 
 <body>
   <div class="header"></div>
-  <img src="Projects/1_Interview/JacobH_3.jpg">
-  <img src="Projects/1_Interview/JacobH_3.jpg">
+  <img src="Project1/JacobH_3.jpg">
+  <img src="Project1/JacobH_3.jpg">
 
   <div class="main">
       <h2>
