--- a/jingru/index.html
+++ b/jingru/index.html
@@ -11,7 +11,7 @@
     <body>
         <ol>
             <!--<li><a href="ex1/index.html">Exercise 1: Carl Dair Markup</li>-->
-            <li><a href="https://github.com/risdweb15-02/webdesign/blob/gh-pages/jingru/project1_interview/interview.html">Project 1: Interview</a></li>
+            <li><a href="http://risdweb15-02.github.io/webdesign/jingru/project1_interview/interview.html">Project 1: Interview</a></li>
         </ol>
 
     </body>
