--- a/gyu-won/index.html
+++ b/gyu-won/index.html
@@ -14,10 +14,10 @@
 
         <h3>Exercises</h3>
         <ul>
-            <li><a href="exercises/01"></a></li>
-            <li><a href="exercises/02-03/html.html"></a></li>
-            <li><a href="exercises/04/artcenter.jpg"></a></li>
-            <li><a href="exercises/05"></a></li>
+            <li><a href="exercises/01">Exercise 1: Path Navigation</a></li>
+            <li><a href="exercises/02-03/html.html">Exercise 2+3: Carl Dair’s Seven Principles of Typographic Contrast</a></li>
+            <li><a href="exercises/04/artcenter.jpg">Exercise 4: Reverse Engineer a Sitemap</a></li>
+            <li><a href="exercises/05">Exercise 5: Floating</a></li>
         </ul>
 
 
