--- a/ruth/index.html
+++ b/ruth/index.html
@@ -9,6 +9,6 @@
     </head>
 <body>
 	<p><a href="exercise1/exercise1-copy.html">Exercise 1: Carl Dair Markup</a></p>
-	<p><a href="project1/interview-copy.html">Project 1: Jacob Hashimoto Interview</a></p>
+	<p><a href="project1/interview.html">Project 1: Jacob Hashimoto Interview</a></p>
 </body>
 </html>
