--- a/yuxin/index.html
+++ b/yuxin/index.html
@@ -13,7 +13,7 @@
         <ol>
 
         <li><a href="seven-principles.html">Carl Dair Mark up</a></li>
-        <li><a href="web-interview/interview.html">Interview Project</a></li>
+        <li><a href="webinterview/interview.html">Interview Project</a></li>
 
         </ol>
         
