--- a/yuxin/webinterview/interview.html
+++ b/yuxin/webinterview/interview.html
@@ -31,7 +31,7 @@
 
             	<img id="curi" src="http://www.popsci.com/sites/popsci.com/files/styles/medium_1x_/public/import/2014/Curi_%20115.jpg?itok=yUgcu3Q2">
 
-            	<p id="caption">Curi the robot/ photography by <i>Harold Daniels<i><a>
+            	<p id="caption">Curi the robot/ photography by <i>Harold Daniels</i><a>
 
             	<p id="frist">Popular Science: Why should robots be able to learn?</p>
 
