--- a/mimi/projects/interviewstyle/interviewstyle.html
+++ b/mimi/projects/interviewstyle/interviewstyle.html
@@ -56,7 +56,7 @@
                 </div>
 
                 <div class="answer">
-                    <p><div class="pictureright"><img src="media/ariel.jpg" alt="Ariel sketch" width="60%"  style="margin-right: -10px;""><div class="captionright";">Ariel sketch <br />by Glen Keane</div></div>
+                    <p><div class="pictureright"><img src="media/ariel.jpg" alt="Ariel sketch" width="60%"  style="margin-right: -10px;""><div class="captionright";">Ariel sketch</div></div>
 
                     But they would do something different with it than anybody is pushing now. I mean, whatever we’ve done now, they would have done something uniquely artistic and expressionist for them.</p>
                     
