--- a/sam/assignment1/index.html
+++ b/sam/assignment1/index.html
@@ -19,6 +19,7 @@
 			Interview with Massimo Vignelli.
 			</p>
 		</div>
+		<div> <img id="image1" src="massimo.jpg"></img></div>
 
 		<div id="container"><p class="body">Massimo Vignelli was one of the few designers I had not personally met prior to our interview, and as a result, I approached the date of our meeting with a certain amount of nervousness. It didn’t help that this was also the only interview wherein I inadvertently stood my subject up. That’s right — I mistakenly scribbled down our mutually agreed upon meeting time in the wrong box of my crude, paper calendar and missed the meeting entirely. In fact, it wasn’t until many hours later that I even realized that I kept Massimo waiting for my arrival. Fortunately for me, he took it in stride, even going so far as graciously suggesting it was better that we didn’t meet that day, as something came up that he need take care of while he waited for me to show up.</p>
 
@@ -36,6 +37,7 @@
 
 
 	</div>
+	<div> <img id="image3" src="nycsubway.jpg"></img></div>
 
 
 	<div>
@@ -55,6 +57,10 @@
 		<br><p class="questionMV4"><span class="MV">MV:</span>
 			When I was 14 years old, extremely early in my life.</p>
 	</div>
+
+
+
+	<div> <img id="image5" src="secondquote.jpg"></img></div>
 	<div>
 		<p class="questionDM5"><span class="DM">DM:</span>What happened?</p>
 		<br><p class="questionMV5"><span class="MV">MV:</span>
@@ -79,6 +85,8 @@
 			 Bodoni is one of the most elegant typefaces ever designed. When I talk about elegance, I mean intellectual elegance. Elegance of the mind. </p>
 	</div>
 
+	<div> <img id="image2" src="massimobodoni.jpg"></img></div>
+
 <div>
 		<p class="questionDM9"><span class="DM">DM:</span>How would you define elegance of the mind?</p>
 		<br><p class="questionMV9"><span class="MV">MV:</span>
@@ -94,6 +102,8 @@
 			 
  </p>
 	</div>
+
+	<div> <img id="image4" src="quote.jpg"></img></div>
 
 <div>
 		<p class="questionDM11"><span class="DM">DM:</span>What do you think design is really about?</p>
