--- a/mimi/index.html
+++ b/mimi/index.html
@@ -12,18 +12,38 @@
 
 
     <body>
+        <style>
+        a {
+            text-decoration: none;
+        }
 
-        Exercises
+        a:hover {
+            color: black;
+        }
+        </style>
+
+        
+
+        <b>Exercises</b>
         <ol>
             <li><a href="exercises/art school website wireframe/sitemap.pdf">Art school website sitemap</a></li>
             <li><a href="exercises/seven principles markup/seven principles.html">Carl Dair Markup</a></li>
+
+            <li><a href="exercises/css-grid-positioning/chessboard.html">Float: Chessboard</a></li>
+            <li><a href="exercises/css-grid-positioning/tennis-court.html">Float: Tennis court</a></li>
+            <li><a href="exercises/css-grid-positioning/3-column-grid.html">Float: 3 column grid</a></li>
+            <li><a href="exercises/css-grid-positioning/blog-layout.html">Float: Blog layout</a></li>
+            <li><a href="exercises/css-grid-positioning/california-case.html">Float: California case</a></li>
+
+            <li><a href="exercises/css-grid-positioning/absolute-positioning.html">Positioning: Absolute positioning</a></li>
+            <li><a href="exercises/css-grid-positioning/fixed-positioning.html">Positioning: Fixed positioning</a></li>
+            <li><a href="exercises/css-grid-positioning/floats-&-relative-positioning.html">Positioning: Floats and relative positioning</a></li>
         </ol>
 
-        <br />
 
 
 
-        Projects
+        <b>Projects</b>
         <ol>
             <li><a href="projects/interviewstyle/interviewstyle.html">Interview</a></li>
         </ol>
