--- a/mimi/projects/interviewstyle/interviewstyle.html
+++ b/mimi/projects/interviewstyle/interviewstyle.html
@@ -239,7 +239,7 @@
                 <div class="answer">
                     <p>Well, the fact is that technology has crossed my path consistently throughout my career, from doing the first computer animation with John Lasseter (<a href="https://www.youtube.com/watch?v=LvIDRoO8KnM">Where The Wild Things Are</a>), and even before that on <i>Fox and the Hound</i>. After doing all this charcoal drawing, I wanted that to be up on the screen, I did not want it to be cleaned up and painted traditionally. I was hunting around for a way to do it, and ran in to the Head of Research Don Iwerks (son of Ub Iwerks).</p>
                    
-                    <div class="pictureright" style="margin-top: 10px;"><img src="media/wildthings.jpg" alt="Where the Wild Things Are CG animation test" width="70%"><div class="captionright" style="width: 200px;"><i>Wild Things</i>, animation test</div></div>
+                    <div class="pictureright" style="margin-top: 10px;"><img src="media/wildthings.jpg" alt="Where the Wild Things Are CG animation test" width="70%"><div class="captionright" style="width: 195px;"><i>Wild Things</i> animation test</div></div>
 
                     <p>He said, “Well, you know I’m thinking about another process of photographic cels, where you can actually photograph the artwork and it’ll be on the cel and you just paint the back of that, and we can have your charcoal drawings up on the screen.”</p>
                     
