Updated Revised Interview Project

--- a/chelsea/index.html
+++ b/chelsea/index.html
@@ -12,8 +12,9 @@
     
     <body>
         <ol>
-            <li><a href="week1exercises/sevenprinciples.html"/>Carl Dair Markup</a></li>
-            <li><a href="project1interview/html/index.html"/>Project 1 Interview</a></li>
+            <li><a href="week1exercises/sevenprinciples.html" target="_blank"/>Carl Dair Markup</a></li>
+            <li><a href="project1interview/html/index.html" target="_blank"/>Project 1 Interview</a></li>
+            <li><a href="project1interview_v2/html/index.html" target="_blank"/>Project 1 Interview Revised</a></li>
         </ol>
     </body>
     
