--- a/chelsea/week1exercises/index.html
+++ b/chelsea/week1exercises/index.html
@@ -34,8 +34,10 @@
         </ol>
         <strong>Positioning</strong>
         <ol>
-            <li><a href="project1interview/html/index.html" target="_blank"/>tba</a></li>
-            
+            <li><a href="positioning/1.html" target="_blank"/>Absolute Positioning</a></li>
+            <li><a href="positioning/2.html" target="_blank"/>Fixed Positioning</a></li>
+            <li><a href="positioning/3.html" target="_blank"/>Floats & Relative Positioning</a></li>
+
         </ol>
     </body>
     
