--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li><a href="sam/">sam</a></li>
                     <li><a href="srecht/">sarah</a></li>
                     <li><a href="tomas/">tomás</a></li>
-                    <li><a href="yuexin/index.html">yuexin</a></li>
+                    <li><a href="yuexin/">yuexin</a></li>
                     <li><a href="yuxin/">yuxin</a></li>
                 </ul>
             </div>
