--- a/ojus/artistbio/index.html
+++ b/ojus/artistbio/index.html
@@ -23,7 +23,12 @@
                 <li>Stephen Colbert</li>
                 <li>Josh Gad</li>
                 <li>Matt Walsh</li>
-                <li>Mo Rocca</li>
+                <li>Mo Rocca
+                    <ul>
+                        <li>item1</li>
+                        <li>item1</li>
+                        <li>item1</li>
+                    </ul></li>
                 <li>Rob Riggle</li>
                 <li>Samantha Bee</li>
                 <li>Ed Helms</li>
@@ -36,7 +41,7 @@
                 <li>John Oliver</li>
             </ul>
             <footer>
-                <p><span>Source:</span> <a href="http://en.wikipedia.org/wiki/Jon_Stewart">Wikipedia</a></p>
+                <p><span>Source:</span> <a href="http://en.wikipedia.org/wiki/Jon_Stewart" target="_self">Wikipedia</a></p>
             </footer>
         </section>
 
