--- a/srecht/index.html
+++ b/srecht/index.html
@@ -8,8 +8,10 @@
     <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
  </head>
     <body> 
-    
+    <h1> Projects </h1>
  <li> <a href="project1/p1.html"> project 1 </a> </li>
+    <h2> Exercises </h2> 
+<li> <a href="exerciseartistbio/exerciseartistbio.html"> Exercise 2 </a></li>
     
     </body>
 
