--- a/chelsea/index.html
+++ b/chelsea/index.html
@@ -30,7 +30,7 @@
         <ol>
             <li><a href="week1exercises/html.html" target="_blank"/>HTML Exercise</a></li>
             <li><a href="week1exercises/sevenprinciples.html" target="_blank"/>Carl Dair Markup</a></li>
-            <li><a href="week1exercises/index.html" target="_blank"/>CSS Exercises</a></li>
+            <li><a href="week1exercises/sitemap.pdf" target="_blank"/>Art Center Site Map</a></li>
             <li><a href="week1exercises/index.html" target="_blank"/>CSS Exercises</a></li>
         </ol>
         <strong>Projects</strong>
