--- a/chelsea/index.html
+++ b/chelsea/index.html
@@ -32,6 +32,7 @@
             <li><a href="week1exercises/sevenprinciples.html" target="_blank"/>Carl Dair Markup</a></li>
             <li><a href="week1exercises/sitemap.pdf" target="_blank"/>Art Center Site Map</a></li>
             <li><a href="week1exercises/index.html" target="_blank"/>CSS Exercises</a></li>
+            <li><a href="week2exercises/artistbio.html" target="_blank"/>Artist Bio</a></li>
         </ol>
         <strong>Projects</strong>
         <ol>
