--- a/chelsea/index.html
+++ b/chelsea/index.html
@@ -37,7 +37,8 @@
         <strong>Projects</strong>
         <ol>
             <li><a href="project1interview/html/index.html" target="_blank"/>Project 1 Interview</a></li>
-            <li><a href="project1interview_v2/html/index.html" target="_blank"/>Project 1 Interview Revised</a>               </li>
+            <li><a href="project1interview_v2/html/index.html" target="_blank"/>Project 1 Interview Revised</a>                 </li>
+            <li><a href="project2artisttour/index.html" target="_blank"/>Project 2 Artist Tour</a>               </li>
         </ol>
     </body>
     
