--- a/tomas/project1interview/messi-interview.html
+++ b/tomas/project1interview/messi-interview.html
@@ -1,10 +1,10 @@
 <head>
     <meta charset="utf-8">
-		<title>On the Field: Lionel Messi</title>
-		<meta name="description" content="">
-		<meta name="viewport" contents="width-device-width">
-		<link rel="stylesheet" type="text/css" href="messi-interview.css">
-		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Playfair+Display+SC">
+    <title>On the Field: Lionel Messi</title>
+    <meta name="description" content="">
+    <meta name="viewport" contents="width-device-width">
+    <link rel="stylesheet" type="text/css" href="messi-interview.css">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Playfair+Display+SC">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Playfair+Display">
   </head>
 
@@ -19,60 +19,60 @@
   
   <!--<div id="author"><p id="authortext">by Sid Lowe</p></div>-->
   
-  <div id="interview"><p id="intro">There is nothing else in today's soccer quite like Lionel Messi. Weaving and flowing electrically through the most stalwart defenses, Messi has led F.C. Barcelona to national and international titles while breaking individual records with an astonishingly aggressive focus. In 2012, he scored 91 goals in 69 games for club and country, and he's been chosen by FIFA as the best player in the world an unprecedented four of the last five years. A left-footer freak with liquid legs and lightening spatial intuition, at age 26 he is on the short list of the greatest players ever.</p></br><p><span>sid lowe</span> What’s your first football memory?</p><p>
-<span>lionel messi</span> My first memories are from when I was very little, maybe three or four years old playing in my neighbourhood at home. I can picture myself with the ball at my feet from a very young age.
+  <div id="interview"><p id="intro">There is nothing else in today's soccer quite like Lionel Messi. Weaving and flowing electrically through the most stalwart defenses, Messi has led F.C. Barcelona to national and international titles while breaking individual records with an astonishingly aggressive focus. In 2012, he scored 91 goals in 69 games for club and country, and he's been chosen by FIFA as the best player in the world an unprecedented four of the last five years. A left-footer freak with liquid legs and lightening spatial intuition, at age 26 he is on the short list of the greatest players ever.</p></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br><p><span id="speaker">sid lowe</span><span id= "lowe0"> What’s your first football memory?</span></p><p>
+<span id="speaker">lionel messi</span><span id= "messi0"> My first memories are from when I was very little, maybe three or four years old playing in my neighbourhood at home. I can picture myself with the ball at my feet from a very young age.</span>
     </p><p>
-<span>lowe </span>Did you learn to avoid the hacking and the fouling way back then?
+<span id="speaker">lowe </span><span id= "lowe">Did you learn to avoid the hacking and the fouling way back then?</span>
     </p><p>
-<span>messi </span>I always had the same style of play. I didn’t really worry about people kicking me.
+<span id="speaker">messi </span><span id= "messi">I always had the same style of play. I didn’t really worry about people kicking me.</span>
     </p><p>
-<span>lowe </span>Looking back on your first weeks and months at Barcelona, were they happy times or bad times?
+<span id="speaker">lowe </span><span id= "lowe">Looking back on your first weeks and months at Barcelona, were they happy times or bad times?</span>
     </p><p>
-<span>messi </span>Both. I was happy to be living in Barcelona and experiencing all those new things. On the other hand, it was hard to be so far away from people. I had to start again, new team-mates, new friends. I also couldn’t play at first because of injury and because there were problems with the paperwork. That start was hard.
+<span id="speaker">messi </span><span id= "messi">Both. I was happy to be living in Barcelona and experiencing all those new things. On the other hand, it was hard to be so far away from people. I had to start again, new team-mates, new friends. I also couldn’t play at first because of injury and because there were problems with the paperwork. That start was hard.</span>
     </p><p>
-<span>lowe </span>Who were your idols?
+<span id="speaker">lowe </span><span id= "lowe">Who were your idols?</span>
     </p><p>
-<span>messi </span>I always admired [Pablo] Aimar; he came from River and I followed him a lot.
+<span id="speaker">messi </span><span id= "messi">I always admired [Pablo] Aimar; he came from River and I followed him a lot.</span>
     </p><p>
-<span>lowe </span>Did you have problems with people because you were small?
+<span id="speaker">lowe </span><span id= "lowe">Did you have problems with people because you were small?</span>
     </p><p>
-<span>messi </span>No, I never had any problems with my height. I was always the smallest kid, at school and in my teams.
+<span id="speaker">messi </span><span id= "messi">No, I never had any problems with my height. I was always the smallest kid, at school and in my teams.</span>
     </p><p>
-<span>lowe </span>You weren’t a regular starter until the age of 13 or 14 when Tito Vilanova, your current coach at Barcelona, took over the team. Did you ever think of giving up?
+<span id="speaker">lowe </span><span id= "lowe">You weren’t a regular starter until the age of 13 or 14 when Tito Vilanova, your current coach at Barcelona, took over the team. Did you ever think of giving up?</span>
     </p><p>
-<span>messi </span>No, never. I always thought about carrying on training and working, chasing my dream. I was lucky that when Tito came I began to play more often and from then on my career changed in the youth system.
+<span id="speaker">messi </span><span id= "messi">No, never. I always thought about carrying on training and working, chasing my dream. I was lucky that when Tito came I began to play more often and from then on my career changed in the youth system.</span>
     </p><p>
-<span>lowe </span>Is Tito the same now as he was then?
+<span id="speaker">lowe </span><span id= "lowe">Is Tito the same now as he was then?</span>
     </p><p>
-<span>messi </span>He’s the same person who coached us in the cadets team. I was little and I don’t remember that much from that time, but he’s the same and he treats us as he did then.
+<span id="speaker">messi </span><span id= "messi">He’s the same person who coached us in the cadets team. I was little and I don’t remember that much from that time, but he’s the same and he treats us as he did then.</span>
     </p><p>
-<span>lowe </span>Did you play the same way you do now, as a false number nine?
+<span id="speaker">lowe </span><span id= "lowe">Did you play the same way you do now, as a false number nine?</span>
     </p><p>
-<span>messi </span>No, the system was different. We played with one striker and I played just behind him, with two wingers out wide. I was a mediapunta. It’s not a case of the false nine starting with that team because we didn’t play that system.
+<span id="speaker">messi </span><span id= "messi">No, the system was different. We played with one striker and I played just behind him, with two wingers out wide. I was a mediapunta. It’s not a case of the false nine starting with that team because we didn’t play that system.</span>
     </p><p>
-<span>lowe </span>Is your playing style a result of your education at Barcelona?
+<span id="speaker">lowe </span><span id= "lowe">Is your playing style a result of your education at Barcelona?</span>
     </p><p>
-<span>messi </span>My style of play has always been the same. I never tried to develop a specific style. From very young I just played this way. What is certainly true is that I learnt a lot in the youth system. The way we worked here was different. There was a lot of contact with the ball and a lot of work on the tactical system. I came from Argentina where we didn’t do anything like that. Over there it was lots of running and not much more.
+<span id="speaker">messi </span><span id= "messi">My style of play has always been the same. I never tried to develop a specific style. From very young I just played this way. What is certainly true is that I learnt a lot in the youth system. The way we worked here was different. There was a lot of contact with the ball and a lot of work on the tactical system. I came from Argentina where we didn’t do anything like that. Over there it was lots of running and not much more.</span>
     </p><p>
-<span>lowe </span>You’ve been reunited with Cesc Fabregas, who you played with at youth level. Do you have a special understanding?
+<span id="speaker">lowe </span><span id= "lowe">You’ve been reunited with Cesc Fabregas, who you played with at youth level. Do you have a special understanding?</span>
     </p><p>
-<span>messi </span>We understand each other very well and we know each other well. It’s easy to play with Cesc because of the style he has. We try to look for each other on the pitch and in training.
+<span id="speaker">messi </span><span id= "messi">We understand each other very well and we know each other well. It’s easy to play with Cesc because of the style he has. We try to look for each other on the pitch and in training.</span>
     </p><p>
-<span>lowe </span>When you played for Barcelona in the first team for the first time, in the pre-season Joan Gamper Trophy, Fabio Capello described you as “a little devil”… 
+<span id="speaker">lowe </span><span id= "lowe">When you played for Barcelona in the first team for the first time, in the pre-season Joan Gamper Trophy, Fabio Capello described you as “a little devil”… </span>
     </p><p>
-<span>messi </span>It was incredible to hear that he had said that. He’s a coach who has won so much and it was very nice that he should say that about me.
+<span id="speaker">messi </span><span id= "messi">It was incredible to hear that he had said that. He’s a coach who has won so much and it was very nice that he should say that about me.</span>
     </p><p>
-<span>lowe </span>When you were about to make your league debut there were problems over your passport… 
+<span id="speaker">lowe </span><span id= "lowe">When you were about to make your league debut there were problems over your passport… </span>
     </p><p>
-<span>messi </span>That was a tough moment, but fortunately it was resolved quite quickly. I wanted to play, I had the chance to make the step up to the first team and they wouldn’t let me. I didn’t understand why I couldn’t play.
+<span id="speaker">messi </span><span id= "messi">That was a tough moment, but fortunately it was resolved quite quickly. I wanted to play, I had the chance to make the step up to the first team and they wouldn’t let me. I didn’t understand why I couldn’t play.</span>
     </p><p>
-<span>lowe </span>Why do you think Deco and Ronaldinho took you under their wing?
+<span id="speaker">lowe </span><span id= "lowe">Why do you think Deco and Ronaldinho took you under their wing?</span>
     </p><p>
-<span>messi </span>I don’t know. Right from the start I was lucky enough to have them by my side. I will be grateful to them for my whole life; them and [Thiago] Motta and Sylvinho.
+<span id="speaker">messi </span><span id= "messi">I don’t know. Right from the start I was lucky enough to have them by my side. I will be grateful to them for my whole life; them and [Thiago] Motta and Sylvinho.</span>
     </p><p>
-<span>lowe </span>What happened to that team? Why did it fall apart so quickly?
+<span id="speaker">lowe </span><span id= "lowe">What happened to that team? Why did it fall apart so quickly?</span>
     </p><p>
-<span>messi </span>I don’t really know what happened. We lost a Champions League semi-final against Manchester United and we lost the league to Real Madrid on goal difference. I don’t really know what happened, but at least it served as a lesson to make sure it doesn’t happen again.
+<span id="speaker">messi </span><span id= "messi"> don’t really know what happened. We lost a Champions League semi-final against Manchester United and we lost the league to Real Madrid on goal difference. I don’t really know what happened, but at least it served as a lesson to make sure it doesn’t happen again.</span>
     </p></br><p id="bio">
 Sid Lowe is a Madrid-based writer</div>
   
