--- a/tomas/index.html
+++ b/tomas/index.html
@@ -14,6 +14,7 @@
         <ol>
             <li><a href="week1exercises/sevenprinciples.html"/>Carl Dair Markup</a></li>
             <li><a href="project1interview/messi-interview.html"/>Project 1 Interview</a></li>
+            <li><a href="hyperlinktour/md_landingpage.html"/>Mark Dion</a></li>
         </ol>
     </body>
     
