--- a/tomas/project2tour/1md_landingpage.html
+++ b/tomas/project2tour/1md_landingpage.html
@@ -5,15 +5,9 @@
     <title>Digital Wunderkammer</title>
     <meta name="description" content="">
     <meta name="viewport" contents="width-device-width">
-    <link rel="stylesheet" type="text/css" href="md_landingpage.css">
+    <link rel="stylesheet" type="text/css" href="1md_landingpage.css">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Homemade+Apple">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Raleway#charset">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Bad+Script">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Reenie+Beanie">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Rock+Salt">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Source+Code+Pro">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=VT323">
   </head>
   
   <body>
