--- a/tomas/project2tour/2md_home.html
+++ b/tomas/project2tour/2md_home.html
@@ -5,7 +5,7 @@
     <title>Digital Wunderkammer</title>
     <meta name="description" content="">
     <meta name="viewport" contents="width-device-width">
-    <link rel="stylesheet" type="text/css" href="md_p2.css">
+    <link rel="stylesheet" type="text/css" href="2md_home.css">
   </head>
   
   <body>
