--- a/tomas/project2tour/6md_collectors.html
+++ b/tomas/project2tour/6md_collectors.html
@@ -5,7 +5,7 @@
     <title>Digital Wunderkammer</title>
     <meta name="description" content="">
     <meta name="viewport" contents="width-device-width">
-    <link rel="stylesheet" type="text/css" href="md_pcab1.css">
+    <link rel="stylesheet" type="text/css" href="6md_collectors.css">
   </head>
 
 
@@ -17,12 +17,12 @@
   <div id="one">
     <div class="col-half">
       <figure>
-      <img src="http://www.goodwatergallery.com/GW01-06/GW/Artists/Dion/images/Dion_Weismandetail.jpg">
+      <img src="http://arttattler.com/Images/Europe/England/Newcastle/Baltic%20Art%20Centre/A%20Duck%20for%20Mr.%20Darwin/Mark-Dion_Tropical-Collectors_Detail_BALTIC_A-Duck-for-Mr-Darwin.3.jpg">
            <figcaption>caption 1</figcaption>
            </figure>
     </div>
     <div class="col-half content">
-      <h2>Cabinet of Curiosities</h2>
+      <h2>Tropical Collectors</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed nam dignissimos consequatur, ipsa architecto veritatis veniam iste, provident magni quas dolorem dolor mollitia eveniet ducimus vel cum, harum at similique.</p>
     </div>
   </div>
@@ -30,7 +30,7 @@
   <div id="one">
     <div class="col-half">
       <figure>
-      <img src="http://www.moma.org/interactives/exhibitions/1999/muse/images/dion_greatchain.jpg">
+      <img src="http://www.holeeditions.co.uk/mark-dion/mark-dion-09-419.jpg">
            <figcaption>caption 2</figcaption>
            </figure>
     </div>
@@ -42,7 +42,7 @@
   <div id="one">
     <div class="col-half">
       <figure>
-      <img src="http://nevolution.typepad.com/.a/6a00e39335dc1e88340147e0ab963e970b-pi">
+      <img src="http://www.whitehotmagazine.com/images/article_images/article_1833-1.jpg">
            <figcaption>caption 3</figcaption>
            </figure>
     </div>
