--- a/tomas/project2tour/7md_tate.html
+++ b/tomas/project2tour/7md_tate.html
@@ -5,7 +5,7 @@
     <title>Digital Wunderkammer</title>
     <meta name="description" content="">
     <meta name="viewport" contents="width-device-width">
-    <link rel="stylesheet" type="text/css" href="md_ptate.css">
+    <link rel="stylesheet" type="text/css" href="7md_tate.css">
   </head>
 
 
