--- a/gyu-won/index.html
+++ b/gyu-won/index.html
@@ -14,16 +14,17 @@
 
         <h3>Exercises</h3>
         <ul>
-            <li><a href="exercises/01">Exercise 1: Path Navigation</a></li>
-            <li><a href="exercises/02-03/html.html">Exercise 2+3: Carl Dair’s Seven Principles of Typographic Contrast</a></li>
-            <li><a href="exercises/04/artcenter.jpg">Exercise 4: Reverse Engineer a Sitemap</a></li>
-            <li><a href="exercises/05">Exercise 5: Floating</a></li>
+            <li><a href="exercises/01">01: Path Navigation</a></li>
+            <li><a href="exercises/02-03/html.html">02+03: Carl Dair’s Seven Principles of Typographic Contrast</a></li>
+            <li><a href="exercises/04/artcenter.jpg">04: Reverse Engineer a Sitemap</a></li>
+            <li><a href="exercises/05">05: Floating</a></li>
         </ul>
 
 
         <h3>Projects</h3>
         <ul>
-            <li><a href="project01/interview.html">Project 1: Interview</a></li>
+            <li><a href="project01/interview.html">01: Style an Interview</a></li>
+            <li><a href="">02: Hyperlinked Artist Tour</a></li>
         </ul>
 
     </body>
