--- a/ji/index.html
+++ b/ji/index.html
@@ -3,15 +3,15 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Ji Assignment Homepage webdesign</title>
+        <title>Ji's Assignment Homepage webdesign</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <!-- <link rel="stylesheet" href="css/main.css"> -->
+        <link rel="stylesheet" href="index.css">
     </head>
     
     <body>
         <ol>
-            <li><a href="1/index.html">Assignment 1</a></li>
+            <li><a href="1/index.html" target="_blank">Assignment 1</a></li>
         </ol>
     </body>
     
