--- a/chelsea/project2artisttour/html/9.html
+++ b/chelsea/project2artisttour/html/9.html
@@ -8,13 +8,22 @@
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="../css/main.css"> 
         <style>
-        
+            #flip {
+                height: 250px;
+                position: absolute;
+                left: 270px;
+                top: -170px;
+                opacity: 0.4;
+                -webkit-transform: rotate(-90deg);  
+                transform: rotate(-90deg);
+            }
         </style>
     </head>
     
     <body>
        <p id="p3">
             “One of the reasons we work so well together is that we don’t sit down with bullet points and put down a master plan.<br><br>It’s like the total opposite.” 
+            <img id="flip" src="../images/flip.jpg">
             <br><br>
             <span id="speaker4">Bjork, Musician
             </span>
