--- a/srecht/index.html
+++ b/srecht/index.html
@@ -4,15 +4,22 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="indexmain.css">
 
     <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
  </head>
     <body> 
     <h1> Projects </h1>
- <li> <a href="project1/p1.html"> project 1 </a> </li>
+ <li>
+     <div class="project1"> 
+         <a href="project1/p1.html"> project 1 </a> 
+     </div>
+        </li>
+        
     <h2> Exercises </h2> 
 <li> <a href="exerciseartistbio/exerciseartistbio.html"> Exercise 2 </a></li>
     
     </body>
 
 </html>
+
