--- a/gyu-won/index.html
+++ b/gyu-won/index.html
@@ -13,19 +13,20 @@
     <body>
 
         <h3>Exercises</h3>
-        <ul>
-            <li><a href="exercises/01">01: Path Navigation</a></li>
-            <li><a href="exercises/02-03/html.html">02+03: Carl Dair’s Seven Principles of Typographic Contrast</a></li>
-            <li><a href="exercises/04/artcenter.jpg">04: Reverse Engineer a Sitemap</a></li>
-            <li><a href="exercises/05">05: Floating</a></li>
-        </ul>
+        <ol>
+            <li><a href="exercises/01">Path Navigation</a></li>
+            <li><a href="exercises/02-03/html.html">Carl Dair’s Seven Principles of Typographic Contrast</a></li>
+            <li><a href="">Exercise 2 continued</a></li>
+            <li><a href="exercises/04/artcenter.jpg">Reverse Engineer a Sitemap</a></li>
+            <li><a href="exercises/05">Floating</a></li>
+        </ol>
 
 
         <h3>Projects</h3>
-        <ul>
-            <li><a href="project01/interview.html">01: Style an Interview</a></li>
-            <li><a href="">02: Hyperlinked Artist Tour</a></li>
-        </ul>
+        <ol>
+            <li><a href="project01/interview.html">Style an Interview</a></li>
+            <li><a href="">Hyperlinked Artist Tour</a></li>
+        </ol>
 
     </body>
     
