--- a/ji/index.html
+++ b/ji/index.html
@@ -10,9 +10,8 @@
     </head>
     
     <body>
-        <ol>
-            <li><a href="1/index.html" target="_blank">Assignment 1</a></li>
-        </ol>
+        <div><h1>Ji's Assignment Homepage webdesign</h1></div>
+        <p><a href="1/index.html" target="_blank">Assignment 1</a></p>
     </body>
     
 </html>
