--- a/srecht/index.html
+++ b/srecht/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 
 <head>
+    <meta name="viewport" content="width=device-width" />
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+ 
     <link rel="stylesheet" href="indexmain.css">
 
     <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
