--- a/yuxin/index.html
+++ b/yuxin/index.html
@@ -10,10 +10,12 @@
     </head>
     
     <body>
+
+        <p id="title">Projects</p>
         <ol>
 
-        <li><a href="seven-principles.html">Carl Dair Mark up</a></li>
-        <li><a href="webinterview/interview.html">Interview Project</a></li>
+        <li><a href="seven-principles.html"><p class="move">Carl Dair Mark up</P></a></li>
+        <li><a href="webinterview/interview.html"><p class="move">Interview Project</p></a></li>
 
         </ol>
         
